dev/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
  namespace: jayasanka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: jayasanka-frontend
        image: jayasanka013/frontend:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
        resources: {}
      restartPolicy: Always
