dev/mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-stateful
  namespace: jayasanka
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  serviceName: ""
  template:
    metadata:
      labels:
        app: database

    spec:
      containers:
        - name: jayasanka-database
          image: mongo:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 27017
            protocol: TCP
          resources: {}
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: jayasanka-pvc
