dev/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoj-service
  namespace: jayasanka
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
