dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jayasanka-ingress
  namespace: jayasanka
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Use the appropriate Ingress controller class
spec:
  rules:
    - host: back.nervoscan.com   # Subdomain for app1
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service  # Update with your app1 service
                port:
                  number: 80
    - host: front.nervoscan.com   # Subdomain for app2
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service  # Update with your app2 service
                port:
                  number: 80
